flutter_tilt_book/contents/v3/en/docs/overview/index.mdx
---
title: Overview
description:
keywords: ["overview"]
---

## Features ✨

- 👀 Tilt & parallax effects
- 🎨 Simulated light & shadow effects
- 📱 Gyroscope sensor support ([Sensors compatibility][])
- 🧱 Multiple layouts
- 👇 Supports hover, touch, and sensors events ([Gesture priority][])
- 🖼️ Smooth animation
- ⚙️ Many custom parameters

<br/>

<Step>
  <StepItem title="Get Started">
    <NavCardGrid>
      <NavCard
        subtitle="Get Started"
        title="Installation"
        description="This guide covers compatibility notes and how to add the flutter_tilt package."
        href="/en/v3/docs/installation"
      />
      <NavCard
        subtitle="Guide"
        title="Simple usage"
        description="Simple examples to help you get started quickly."
        href="/en/v3/docs/guides/simple-usage"
      />
    </NavCardGrid>
  </StepItem>

  <StepItem title="Widgets">
    <NavCardGrid>
      <NavCard
        subtitle="Widgets"
        title="Tilt widget"
        description={
          <div>
            Learn about Tilt widget parameters.
            <br />
            Tilt widget will have default tilt, shadow, and light effects.
          </div>
        }
        href="/en/v3/docs/widgets/tilt-widget"
      />
      <NavCard
        subtitle="Widgets"
        title="TiltParallax widget"
        description={
          <div>
            Learn about TiltParallax widget parameters.
            <br />
            Parallax effect in the Tilt widget.
          </div>
        }
        href="/en/v3/docs/widgets/tiltparallax-widget"
      />
    </NavCardGrid>
  </StepItem>

  <StepItem title="Examples">
    <NavCardGrid>
      <NavCard
        title="All examples"
        description="Explore examples with source code."
        href="/en/v3/docs/examples"
      />
    </NavCardGrid>
  </StepItem>
</Step>

[Sensors compatibility]: /en/v3/docs/installation/#sensors-compatibility
[Gesture priority]: /en/v3/docs/widgets/tilt-widget/#gesture-priority
