flutter_tilt_book/contents/v4/en/docs/overview/index.mdx
---
title: Overview
description:
keywords: ["overview"]
---

## Features ✨

- 👀 Tilt & parallax effects
- 🎨 Simulated light & shadow effects
- 📱 Gyroscope sensor support ([Sensor compatibility][])
- 🧱 Multiple layouts
- 👇 Supports hover, touch, and sensors events ([Gesture priority][])
- 🖼️ Smooth animation
- ⚙️ Many custom parameters

## New to flutter_tilt?

<NavCardGrid>
  <NavCard
    subtitle="Get Started"
    title="Installation"
    description="This guide covers compatibility notes and how to add the flutter_tilt package."
    href="/en/v4/docs/installation"
  />
  <NavCard
    subtitle="Guide"
    title="Simple usage"
    description="Simple examples to help you get started quickly."
    href="/en/v4/docs/guides/simple-usage"
  />
</NavCardGrid>

## Migrate to v4

<NavCardGrid>
  <NavCard
    subtitle="Upgrade"
    title="^3.0.0 to ^4.0.0"
    description=""
    href="/en/v4/docs/migration-guides/migrate-to-v4-0-0/"
  />
</NavCardGrid>

## Explore usage examples

<NavCardGrid>
  <NavCard
    title="All examples"
    description="Explore examples with source code."
    href="/en/v4/docs/examples"
  />
</NavCardGrid>

## Widget APIs

<NavCardGrid>
  <NavCard
    subtitle="Widget"
    title="Tilt"
    description={
      <div>
        Learn about Tilt widget parameters.
        <br />
        Tilt widget only manages gesture, sensor, and animation state.
      </div>
    }
    href="/en/v4/docs/widgets/tilt-widget"
  />
  <NavCard
    subtitle="Widget"
    title="Tilt container"
    description={
      <div>
        Learn about all Tilt container styles.
      </div>
    }
    href="/en/v4/docs/widgets/tilt-container"
  />
  <NavCard
    subtitle="Widget"
    title="TiltParallax"
    description={
      <div>
        Learn about TiltParallax widget parameters.
        <br />
        Parallax effect in the Tilt widget.
      </div>
    }
    href="/en/v4/docs/widgets/tilt-parallax-widget"
  />
  <NavCard
    subtitle="Widget"
    title="TiltAnimatedBuilder"
    description={
      <div>
        Learn about TiltAnimatedBuilder widget parameters.
        <br />
        It allows you to customize the tilt animation.
      </div>
    }
    href="/en/v4/docs/widgets/tilt-animated-builder-widget"
  />
</NavCardGrid>


[Sensor compatibility]: /en/v4/docs/installation/#sensor-compatibility
[Gesture priority]: /en/v4/docs/widgets/tilt-widget/#gesture-priority
